REGRESSION (305325@main): Layout of columns is incorrect for some fonts https://bugs.webkit.org/show_bug.cgi?id=308087 rdar://170594582

Reviewed by Alan Baradlay.

Revert glyph overflow tracking changes from 8161ef47a831

* LayoutTests/fast/repaint/emoji-glyph-overflow-repaint-fail-expected.txt:
* LayoutTests/platform/glib/fast/repaint/emoji-glyph-overflow-repaint-fail-expected.txt:
* Source/WebCore/layout/formattingContexts/inline/InlineItem.cpp:
* Source/WebCore/layout/formattingContexts/inline/InlineItem.h:
* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::nonWhitespaceContentWidth):
(WebCore::Layout::InlineItemsBuilder::computeInlineTextItemWidthsAndTextSpacing):
(WebCore::Layout::InlineItemsBuilder::buildInlineItemListForTextFromBreakingPositionsCache):
(WebCore::Layout::InlineItemsBuilder::handleTextContent):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::Run::Run):
(WebCore::Layout::Line::Run::expand):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::Run::GlyphOverflow::isEmpty const): Deleted.
(WebCore::Layout::Line::Run::glyphOverflow const): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineTextItem.h:
(WebCore::Layout::InlineTextItem::createNonWhitespaceItem):
(WebCore::Layout::InlineTextItem::width const):
(WebCore::Layout::InlineTextItem::glyphOverflow const): Deleted.
(WebCore::Layout::InlineTextItem::setGlyphOverflow): Deleted.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::appendTextDisplayBox):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::width):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.h:
(WebCore::Layout::TextUtil::width):

Canonical link: https://commits.webkit.org/307942@main